--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,8 +14,6 @@ theme:
   features:
     - navigation.tabs
     - navigation.top
-    - navigation.expand
-    - navigation.instant
     - search.highlight
     - search.suggest
     - toc.follow
@@ -57,8 +55,7 @@ nav:
   - Home: index.md
   - Experience: experience.md
   - Execution: execution.md
-  - Evidences:
-      - Year-1 Operational & Financial Case Study (Amazon Private Label Business – Canada Marketplace): evidences/year-1-canada-private-label-report-2025.md
+  - Evidences: evidences/index.md  
   - About: about.md
 
 extra:
@@ -72,3 +69,4 @@ extra_css:
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js
+  #- javascripts/dropdown.js
